base/fabg/deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: fabg
spec:
  replicas: 2
  template:
    metadata:
      name: fabg
      labels:
        base: fabg
    spec:
      containers:
      - name: fabg
        image: asia.gcr.io/nonononono/fabg:latest
        imagePullPolicy: Always
        # command: ["sh", "-c", "tail -f /dev/null"]
        command: ["/bin/sh", "-c", "java -jar /apps/boot-ads/ads/ads.jar"]
        volumeMounts:
        - name: fabg-shared
          mountPath: /apps/fabg-shared
        - name: cloudsql-instance-credentials
          mountPath: /secrets/cloudsql

      - name: simply-nginx
        image: nginx:alpine
        ports:
        - name: simply-nginx
          containerPort: 80
        volumeMounts:
        - name: simply-nginx-conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        - name: fabg-shared
          mountPath: /apps/fabg-shared

      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.13
        command: ["/cloud_sql_proxy",
                  "-instances=boot-ads:asia-northeast1:fabgmaster-instance=tcp:3306",
                  "-credential_file=/secrets/cloudsql/credentials.json"]
        volumeMounts:
        - name: cloudsql-instance-credentials
          mountPath: /secrets/cloudsql

      volumes:
      - name: cloudsql-instance-credentials
        secret:
          secretName: gcread
      - name: simply-nginx-conf
        configMap:
          name: simply-nginx-conf
      - name: fabg-shared
        emptyDir: {}
